--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
@@ -1,58 +1,13 @@
 
 
-/* generic classes */
-.dna-fl     {float:left}
-.dna-fr     {float:right}
-.dna-clear  {clear:both}
-.dna-center {text-align:center}
-
-.dna-half {width:49%}
-.dna-box    {position:relative; margin-bottom:10px; background:#fff; height:1%; border:1px solid #666}
-.dna-box-border {padding:3px; margin-bottom:10px; background:#fff; border:1px dashed #666}
-.dna-list-links {margin:10px}
-.dna-list-links li{margin-bottom:5px; list-style-type:square; color:#666; margin-left:15px}
-
-.dna-preview-box {position:relative; margin-bottom:10px; background:#fff; height:1%; border:1px solid #666}
-.dna-preview-box label {display:inline-block!important; vertical-align:top}
-.dna-preview-box  li {padding:3px 10px}
-.dna-preview-box .dna-buttons {margin:20px 10px 0 10px}
-
-.dna-edit-topic-1 li,.dna-edit-topic-2 li {position:relative; padding:10px}
-.dna-edit-topic-1 li p,.dna-edit-topic-2 li p {margin:10px 0 !important}
-.dna-replies {text-align:right}
-.dna-edit-topic-1 .dna-link-edit,.dna-edit-topic-2 .dna-link-edit {right:10px; top:0}
-
-.dna-edit-topic-2 li {width:19.3em; min-height:32.5em}
-.dna-topic-pos{width:25px!important}
-
-
-.dna-topic-step{color:#666; font-size:.8em}
-
-.dna-main p,.dna-main h4  {margin:10px}
-
-.dna-fnote  {font-size:.8em; color:#666}
-span.dna-fnote {display:block; margin-top:2px}
-
-.off        {position:absolute; left:-9000px; top:0; z-index:20}
-
-/* default styles */
+/* DEFAULT STYLES */
 p, ul, h1, h2, h3, h4, h5 {line-height:130%}
 
+
+/* link */
 .dna-main a {color:#666; padding:1px; border-bottom:1px solid #666}
 .dna-main a:hover{border-bottom:none}
 .dna-main a:focus,.dna-main a:active {border-bottom:none; background:#666; color:#fff}
-
-
-.dna-main {background-color:#ebebd6; clear:both; height:1%; padding:10px; margin:30px 0 0 0}
-.dna-main-left {width:57.5em; margin:0 0 20px 0}
-.dna-main-right {width:21em; margin:0 0 20px 0}
-.dna-main-right div {margin-bottom:20px}
-.dna-main-full  {width:100%; margin:0 0 20px 0}
-
-.dna-main h3,.dna-main h4 {margin-bottom:10px; text-transform:uppercase}
-.dna-main h3 {padding:5px; color:#fff; background-color:#56a4ce}
-.dna-main h4 {border-bottom:1px solid #56a4ce; line-height:140%}
-.dna-main h3 a {float:right; margin-top:-2px}
 
 .dna-link-edit {position:absolute; top:-6px; right:0; line-height:150%}
 .dna-link-edit a {padding:1px 3px; height:1%; text-transform:uppercase;  background-color:#fff; color:#666; border:1px solid #666; font-size:.8em}
@@ -60,7 +15,52 @@ p, ul, h1, h2, h3, h4, h5 {line-height:130%}
 
 .dna-main a,#blq-local-nav a {text-decoration:none}
 
-/* header - banner*/
+/* container divs  */
+.dna-main {background-color:#ebebd6; clear:both; height:1%; padding:10px; margin:30px 0 0 0}
+.dna-main-left {width:57.5em; margin:0 0 20px 0}
+.dna-main-right {width:21em; margin:0 0 20px 0}
+.dna-main-right div {margin-bottom:20px}
+.dna-main-full  {width:100%; margin:0 0 20px 0}
+.dna-half {width:49%}
+.dna-main p {margin:10px}
+
+/* headings  */
+.dna-main h3,.dna-main h4 {margin-bottom:10px; text-transform:uppercase}
+.dna-main h3 {padding:5px; color:#fff; background-color:#56a4ce}
+.dna-main h4 {border-bottom:1px solid #56a4ce; line-height:140%; margin:10px}
+.dna-main h3 a {float:right; margin-top:-2px}
+
+
+/* COMMON CLASSES */
+.dna-fl {float:left}
+.dna-fr {float:right}
+.dna-clear {clear:both}
+.dna-center {text-align:center}
+
+.dna-box {position:relative; margin-bottom:10px; background:#fff; height:1%; border:1px solid #666}
+
+.dna-fnote  {font-size:.8em; color:#666}
+span.dna-fnote {display:block; margin-top:2px}
+
+.dna-off {position:absolute; left:-9000px; top:0; z-index:20}
+
+/* default form */
+.dna-main form label {margin-bottom:3px; font-weight:bold; display:block}
+.dna-main form input[type=text]{width:100%}
+
+
+/* save and cancel buttons */
+.dna-buttons {clear:both; height:1%; padding:10px 0; margin-top:15px; border-top:1px solid #56a4ce!important}
+.dna-buttons li {display:inline-block; float:left;  padding:0; height:1%; margin-right:10px}
+.dna-buttons input {display:block; padding:2px; text-transform:uppercase; cursor:pointer; background-color:#fff; font-weight:bold; color:#666; border:1px solid #666; font-size:.8em}
+.dna-buttons input:focus {background-color:#666; color:#fff}
+.dna-buttons a {padding:1px 3px; height:1%; text-transform:uppercase;  background-color:#fff; color:#666; border:1px solid #666; font-size:.8em}
+.dna-buttons a:hover {border-bottom:1px solid #666}
+
+.dna-btn-link {display:block; padding:2px 5px!important; text-transform:uppercase; cursor:pointer; background-color:#fff; font-weight:bold; color:#666; border:1px solid #666; font-size:.8em}
+
+
+/* HEADER - banner*/
 h1  {padding:20px 10px; color:#fff; background:#56a4ce}
 h1 span {border-left:1px solid #fff; padding-left:6px; margin-left:7px}
 
@@ -69,56 +69,71 @@ h1 span {border-left:1px solid #fff; padding-left:6px; margin-left:7px}
 #blq-local-nav li{float:left; margin-right:4px; height:1%;}
 #blq-local-nav li a {display:inline-block; padding:4px 7px; font-weight:bold; background-color:#fff; border-top:1px solid #666; border-right:1px solid #666; border-left:1px solid #666}
 
+/* EMERGENCY stop */
 .dna-emergency-stop {float:right; margin:20px 10px 10px 10px; width:20em; background:#ccc}
 .dna-emergency-stop strong {display:block; margin-bottom:3px}
 .dna-emergency-stop a {display:inline-block; padding:3px 5px; text-decoration:none; color:#666}
 .dna-emergency-stop a:hover {text-decoration:underline}
 
-/* intro text */
+/* INTRO text */
 .dna-mb-intro {width:45em; margin:20px 10px}
 .dna-mb-intro p {margin:10px 0}
 
+/* ADMIN TAB */
 /* box: preview */
-.dna-preview  {background-color:#fff; border:1px solid #666}
+.dna-preview {background-color:#fff; border:1px solid #666}
 .dna-preview h3 {color:#666; background-color:transparent}
 .dna-preview a.button {padding:3px; color:#fff; background-color:#56a4ce; border:1px solid #666}
 
 /* box: publish */
-.dna-publish  {background-color:#56a4ce; border:1px solid #666}
+.dna-publish {background-color:#56a4ce; border:1px solid #666}
 .dna-publish h3 {color:#fff; background-color:transparent}
 .dna-publish a.button {padding:3px; background-color:#fff; border:1px solid #666}
 .dna-publish .dna-fnote {color:#000}
 
-/* form */
-.dna-main form  {}
-.dna-main form label {margin-bottom:3px; font-weight:bold; display:block}
-.dna-main form input[type=text]{width:100%}
+/* box: open times */
+.dna-open-time {margin:0 10px 10px 10px}
+.dna-open-time table {width:100%}
+.dna-open-time td,.dna-open-time th {padding:4px}
+.dna-open-time tr.odd {background-color:#ebebd6}
 
-.dna-buttons {clear:both; height:1%; padding:10px 0; margin-top:15px; border-top:1px solid #56a4ce!important}
-.dna-buttons li {display:inline-block; float:left;  padding:0; height:1%; margin-right:10px}
-.dna-buttons input {display:block; padding:2px; text-transform:uppercase; cursor:pointer; background-color:#fff; font-weight:bold; color:#666; border:1px solid #666; font-size:.8em}
-.dna-btn-link {display:block; padding:2px 5px!important; text-transform:uppercase; cursor:pointer; background-color:#fff; font-weight:bold; color:#666; border:1px solid #666; font-size:.8em}
-
-
-
+/* SCHEDULE page */
 .dna-open-times {margin:5px 10px}
 .dna-open-times label {display:inline-block !important; font-weight:normal !important}
 .dna-open-times table   {width:100%}
 .dna-open-times td,.dna-open-times table th {padding:4px}
 .dna-open-times tr.odd {background-color:#ebebd6}
 
-.dna-open-time {margin:0 10px 10px 10px}
-.dna-open-time table {width:100%}
-.dna-open-time td,.dna-open-time th {padding:4px}
-.dna-open-time tr.odd {background-color:#ebebd6}
+/* DESIGN TAB */
+.dna-box-border {padding:3px; margin-bottom:10px; background:#fff; border:1px dashed #666}
+.dna-list-links {margin:10px}
+.dna-list-links li {margin-bottom:5px; list-style-type:square; color:#666; margin-left:15px}
 
 
-
+/* design landing page : 4 cols layout*/
 #dna-preview-content {clear:both; margin-bottom:10px}
 #dna-preview-left {width:15em; margin-right:10px}
 #dna-preview-middle {width:42.8em; margin-right:10px}
 #dna-preview-right {width:20em}
 
+/* display topic layout: 1 or 2 cols */
+.dna-edit-topic-1 li,.dna-edit-topic-2 li {position:relative; padding:10px}
+.dna-edit-topic-1 li p,.dna-edit-topic-2 li p {margin:10px 0 !important}
+.dna-replies {text-align:right}
+.dna-edit-topic-1 .dna-link-edit,.dna-edit-topic-2 .dna-link-edit {right:10px; top:0}
+.dna-edit-topic-1 li {width:40.9em}
+.dna-edit-topic-2 li {width:19.3em; min-height:32.5em}
+.dna-topic-pos {width:25px!important}
+
+
+/* overlay */
+.dna-preview-box {margin-bottom:10px; background:#fff; height:1%; border:1px solid #666}
+.dna-preview-box label {display:inline-block!important; vertical-align:top}
+.dna-preview-box li {padding:3px 10px}
+.dna-preview-box .dna-buttons {margin:20px 10px 0 10px}
+.dna-topic-step {color:#666; font-size:.8em}
+
+/* color scheme */
 .blue{background:}
 .sky{background:}
 .teal{background:}
@@ -131,9 +146,9 @@ h1 span {border-left:1px solid #fff; padding-left:6px; margin-left:7px}
 .purple{background:}
 .red{background:}
 .orange {background:}
-
-
-
+.black {background:}
+.white {background:}
+.grey {background:}
 
 
 /* clear hacks */
