--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
@@ -16,7 +16,8 @@ p, ul, h1, h2, h3, h4, h5 {line-height:130%}
 .dna-main a,#blq-local-nav a {text-decoration:none}
 
 /* container divs  */
-.dna-main {background-color:#ebebd6; clear:both; height:1%; padding:10px; margin:30px 0 0 0}
+.dna-main {clear:both; height:1%; padding:10px; margin:30px 0 0 0}
+.dna-main-bg{background-color:#ebebd6;}
 .dna-main-left {width:57.5em; margin:0 0 20px 0}
 .dna-main-right {width:21em; margin:0 0 20px 0}
 .dna-main-right div {margin-bottom:20px}
@@ -98,11 +99,15 @@ h1 span {border-left:1px solid #fff; padding-left:6px; margin-left:7px}
 .dna-open-time tr.odd {background-color:#ebebd6}
 
 /* SCHEDULE page */
-.dna-open-times {margin:5px 10px}
-.dna-open-times label {display:inline-block !important; font-weight:normal !important}
-.dna-open-times table   {width:100%}
-.dna-open-times td,.dna-open-times table th {padding:4px}
-.dna-open-times tr.odd {background-color:#ebebd6}
+.dna-mb-opentime {}
+.dna-mb-opentime div div {padding:0 10px 10px 10px}
+.dna-mb-opentime label {display:inline-block !important; font-weight:normal !important}
+.dna-mb-opentime table   {width:100%}
+.dna-mb-opentime td,.dna-mb-opentime table th {padding:4px}
+.dna-mb-opentime tr.odd {background-color:#ebebd6}
+.dna-mb-opentime input[type=checkbox] {margin-top:3px}
+
+.dna-radio-stime {width:10em; vertical-align:middle; margin:0!important; padding-left:5px}
 
 /* DESIGN TAB */
 .dna-box-border {padding:3px; margin-bottom:10px; background:#fff; border:1px dashed #666}
