Check in for RC

--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/layout_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/layout_messageboard_v2.css
@@ -25,3 +25,7 @@
 	/*width: 100%; how to make this relative size? */
 	width: 463px;
 }
+/* IE 6 layout 
+body.ie6 #dna-boardpromo {
+	width: 125px;
+}*/
