--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -8,6 +8,10 @@
 #blq-main #blq-content a:hover, #blq-main #dna-boardpromo a:hover {
 	text-decoration: none;
 }
+#blq-main #blq-content a:focus, #blq-main #dna-boardpromo a:focus {
+	background: #376dad;
+	color: #fff;
+}
 h3 span { 
 	font-size:0.6em; 
 	padding:0 0 0 7px; 
@@ -59,17 +63,17 @@ ul li h4 {
 	background: url(/dnaimages/dna_messageboard/img/bg_topnav.gif) center right no-repeat;
 	line-height: 1.8em;
 	text-decoration: none;	
-	color: white;	
+	color: #fff;				
 }
 #blq-main #global-nav ul li.last a {
 	background: none;
 }
-#blq-main #global-nav ul li a:hover, #blq-main #global-nav ul li.selected a {
-	background: white;
+#blq-main #global-nav ul li a:hover, #blq-main #global-nav ul li.selected a, #blq-main #global-nav ul li a:focus {
+	background: #fff;
 	color: #366eab;
 }
 ul.navigation {
-  	border: 1px solid #CCCCCC;
+  	border: 1px solid #ccc;
   	margin-bottom: 14px;
   	line-height: 1.5em;
 }
@@ -95,6 +99,7 @@ ul.navigation li a {
 	margin-left: 14px;
 	margin-bottom: 14px;
 	width: 146px;
+	display: inline;
 }
 #blq-local-nav ul.topics {
 	border-top: none;
@@ -109,21 +114,24 @@ ul.navigation li a {
 	font-size: 1.1em;
 }
 #blq-local-nav ul.local-site-nav li {
-	border-bottom: 1px solid white;
+	border-bottom: 1px solid #fff;
 }
 #blq-main  #blq-local-nav ul.local-site-nav a {
-	color: white; 
+	color: #fff; 
 }
-#blq-local-nav ul.local-site-nav a:hover {
+#blq-local-nav ul.local-site-nav a:hover, #blq-local-nav ul.local-site-nav a:focus {
 	background: #71aef1;
 }
 #blq-main #blq-local-nav ul li.topic-parent a {
 	background: #71aef1;
-	color: white;
+	color: #fff;
 }
 #blq-local-nav ul.topics li {
 	padding-left: 5px;	
 	line-height: 1.2em;
+}
+body.ie6 #blq-local-nav ul.topics li {
+	line-height: 0.8em;
 }
 #blq-local-nav ul.topics li.topic-parent {
 	padding-left: 0;
@@ -132,14 +140,23 @@ ul.navigation li a {
 #blq-local-nav ul.topics li a:hover {
 	/*font-weight: bold;*/	
 }
+#blq-main #blq-local-nav ul.topics li a:focus {
+	background: #376dad;
+	color: #fff;
+}
 ul.admin {
 	background: #e2e2e2;	
 }
 #blq-main #blq-local-nav ul.admin li a {
   color: #666;
 }
+#blq-main #blq-local-nav ul.admin li a:focus {
+	background: #666;
+	color: #e2e2e2;
+}
 #blq-main ul.navigation li.hr {
-	padding: 2px 0;
+	padding: 0;
+	margin: 0;
 }
 #blq-main ul.navigation li.hr hr {
 	line-height: 1px;
@@ -163,7 +180,10 @@ ul.admin {
 	border-bottom: 1px solid #CCCCCC;
 	border-left: 1px solid #CCCCCC;
 }
-#frontpage #blq-main #blq-content h2 {
+#blq-main .addthread p.signin {
+	padding: 10px;	
+}
+.frontpage h2 {
 	margin-right: 14px;	
 }
 #blq-main #blq-content h2, #blq-main #dna-boardpromo h3 {
@@ -181,6 +201,10 @@ ul.admin {
 	/*font-size: 0.8em;*/
 	color: #fff;
 }
+#blq-main #blq-content h2 span a:focus {
+	background: #fff;
+	color: #71aef1;
+}
 #blq-main ul.topfives {
 	margin: 10px 10px 10px 25px;
 	color: #0066cc;
@@ -196,38 +220,42 @@ ul.admin {
 	padding: 10px;	
 }
 /* pagination */
-.pagination { 
+#blq-main #blq-content .pagination { 
   	margin: 10px; 
   	float:right;
   	width: auto;
   	clear: both;
 }
-.pagination li {
+#blq-main #blq-content .pagination li {
   	float:left;
   	width: auto;
   	margin-right: 1px;
 }
-.pagination li a, .pagination li span {
+
+body.ie6 #blq-main #blq-content .pagination li {
+  	width: 1px;
+}
+#blq-main #blq-content .pagination li a, #blq-main #blq-content .pagination li span {
 	display: block;
 	height: 10px;
 	font-size:0.9em; 
 	margin:0 1px 0 0; 
 	padding: 3px 7px 7px 7px;
 }
-#blq-main .pagination li a:hover {
+#blq-main #blq-content .pagination li a:hover {
 	text-decoration: underline;	
 }
-.pagination li.previous {
+#blq-main #blq-content .pagination li.previous {
 	margin-right: 7px; 	
 }
-.pagination li.next {
+#blq-main #blq-content .pagination li.next {
 	margin-left: 7px; 	
 }
-.pagination li.dna-button {
+#blq-main #blq-content .pagination li.dna-button {
 	height: 20px;
 	background: url(/dnaimages/dna_messageboard/img/button_left_bg.png) top left no-repeat;
 }
-#blq-main .pagination li.dna-button a {
+#blq-main #blq-content .pagination li.dna-button a {
 	height: 11px;
 	margin-left: 3px;
 	padding: 3px 7px 6px 5px;
@@ -235,26 +263,26 @@ ul.admin {
 	text-decoration: none;
 	color: #fff;
 }
-#blq-main .pagination li.current a {
+#blq-main #blq-content .pagination li.current a {
   	background:#71aef1;
 }
-#blq-main .pagination li span {
+#blq-main #blq-content .pagination li span {
 	margin-left: 3px;
 	background: url(/dnaimages/dna_messageboard/img/button_right_bg.png) top right no-repeat;
 	color: #fff;
 	padding: 3px 7px 7px 5px;
 }
-#blq-main .pagination li a {
+#blq-main #blq-content .pagination li a {
 	display: block;
 	/*height: 16px;*/
 	background-color: #376dad;
-	color: #fff !important; /* what is overriding this? */
+	color: #fff; 
 	text-decoration: none;
 }
-.pagination .arrow {
+#blq-main #blq-content .pagination .arrow {
   	display:none;
 }
-.pagination li.selected { 
+#blq-main #blq-content .pagination li.selected { 
   	background:#f359ff;
 }
 /* end pagination */
@@ -315,6 +343,7 @@ ul.admin {
 }
 #blq-content .topiclist li div.topicimage img {
   	border: 0;
+  	
 }
 #blq-main .multiposts h5 {
 	padding-left: 10px;
@@ -334,9 +363,6 @@ ul.forumthreadposts li p {
 }
 #blq-main .addthread .article {
 	margin-top: 0.8em;	
-}
-.addthread ul.forumthreadposts li {
-	/*border: 1px solid red;*/
 }
 .addthread ul.forumthreadposts li.firstpost {
 	padding: 10px 15px;
@@ -534,9 +560,13 @@ a.editor, a.notable {
 .dna-invisible { display: none; }
 #blq-content .dna-boards-moderation .dna-invisible {display:none}
 #blq-main #blq-content .dna-boards-moderation a {
-  	padding-left:8px; 
+  	padding-left:3px; 
   	color:#666; 
   	/*font-size: 100%;*/
+}
+#blq-main #blq-content .dna-boards-moderation a:focus {
+	background: #666;
+	color: #e2e2e2;
 }
 
 /* end main content */
@@ -551,7 +581,7 @@ a.editor, a.notable {
 	margin-bottom: 14px;	
 }
 div#dna-boardpromo div p  {
-  	padding: 10px;
+  	padding: 10px 9px;
 }
 div#dna-boardpromo #dna-about-board {
 	background: #f1f1f1;
@@ -569,7 +599,7 @@ div#dna-boardpromo #dna-about-board .id-wrap a.id-signin, #blq-main #blq-content
 	margin-left: 10px;
 	padding: 3px 5px 0px 45px;
 	background:url(/dnaimages/dna_messageboard/img/id-signin.gif) no-repeat top left; 	
-	color: black;
+	color: #000;
 	font-size: 1.4em;
 	font-weight: bold;
 	text-decoration: none;
@@ -583,7 +613,7 @@ div#dna-boardpromo #dna-about-board .id-wrap a.id-signin, #blq-main #blq-content
 }
 div#dna-boardpromo #dna-about-board .id-wrap a.id-signin:hover, #blq-main #blq-content .id-wrap a.id-signin:hover  {
 	background:url(/dnaimages/dna_messageboard/img/id-signin-hover.gif) no-repeat top left;
-	color: white; 
+	color: #fff; 
 }
 div#dna-boardpromo #dna-about-board .id-wrap, #blq-content .id-wrap  {
 	border: none;	
@@ -591,7 +621,7 @@ div#dna-boardpromo #dna-about-board .id-wrap, #blq-content .id-wrap  {
 	margin: 0;
 }
 div#dna-boardpromo #dna-about-board .id-wrap p, #blq-content .id-wrap p {
-	line-height: 2em;
+	line-height: 2.1em;
 }
 #blq-main #dna-boardpromo hr {
 	margin: 10px 10px 0 10px;
@@ -735,7 +765,7 @@ p.flag a {
 	-moz-border-radius: 3px; 
 	-webkit-border-radius: 3px;
 	border: none;	
-	color: white;
+	color: #fff;
 	font-size: 0.9em;
 	font-weight: bold;
 }
@@ -781,6 +811,41 @@ div#logintrouble {
 	color: #FFF; 
 	font-size: 1.2em;
 }
+/* error pages */
+#blq-main .problem {
+	margin: 0;
+	padding: 0;	
+}
+.servertoobusy {
+	width: 100%;
+	margin-top: 20px;	
+	font-size: 1.1em;
+}
+#blq-main #blq-content .servertoobusy h3 {
+	margin: 0;
+	padding: 0;
+	font-size: 1em;
+	color: #000;
+}
+.servertoobusy p {
+  margin: 10px 0 10px 0;
+}
+.servertoobusy ul {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.servertoobusy li.sitelink {
+  float: left;
+  margin-right: 10px;
+  /*width: 15%;*/
+}
+#blq-content .servertoobusy li.sitelink a {
+  border-bottom: 0;
+}
+.servertoobusy li.sitelink img {
+  border: 0;
+}
+
 
 /* bookmark links */
 #blqx-bookmark a {color:#fff;;text-decoration:underline;}
@@ -800,7 +865,7 @@ div#logintrouble {
 #blqx-bookmark p.blqx-what {position:absolute;bottom:-1px;right:0;padding:8px 0px;text-align:right;width:974px}
 /* end bookmark links */
 
-body.ie #blq-content .topiclist p {
+/*body.ie #blq-content .topiclist p {
   height:160px; 
   font-size: 0.9em;
 }
@@ -820,4 +885,4 @@ body.ie ul.globalNav{margin:12px 0 0 0;}
 body.ie ul.globalNav li.sidePanel{line-height:1;}
 body.ie ul.topiclist li h3 { padding-bottom: 10px; }
 body.ie div#blq-content h3 { height: 20px; }
-body.ie div#blq-content ul.forumthreadposts p { word-wrap: break-word; } /* IE hack */
+body.ie div#blq-content ul.forumthreadposts p { word-wrap: break-word; }*/ /* IE hack */
