--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
@@ -5,10 +5,10 @@ p, ul, h1, h2, h3, h4, h5 {line-height:130%}
 
 #blq-content,.glow110-overlay {color:#666}
 
-.dna-main input:focus,.dna-main select:focus {border:1px solid #82bdde; background:#e7f0f5}
+.dna-main input:focus,.dna-main select:focus {border:1px solid #7f9db9; background:#ebebe4}
 
 /* link */
-.dna-main a,.glow110-overlay a {color:#666; padding:1px; border-bottom:1px solid #666}
+.dna-main a,.glow110-overlay a {color:#666; padding:1px; border-bottom:1px solid #666; text-decoration:none}
 .dna-main a:hover,.glow110-overlay a:hover{border-bottom:none}
 .dna-main a:focus,.glow110-overlay a:focus,.dna-main a:active,.glow110-overlay a:active {border-bottom:none; background:#666; color:#fff}
 
@@ -53,7 +53,7 @@ p, ul, h1, h2, h3, h4, h5 {line-height:130%}
 .dna-box {position:relative; margin-bottom:10px; background:#fff; height:1%; border:1px solid #ccc}
 .dna-box-border {padding:3px; margin-bottom:10px; background:#fff; border:1px dashed #ccc}
 
-.dna-fnote  {font-size:.8em}
+.dna-fnote  {font-size:.8em; word-wrap:break-word}
 span.dna-fnote {display:block; margin-top:2px}
 .glow110-overlay .dna-fnote  {font-size:1em}
 
@@ -66,7 +66,7 @@ span.dna-fnote {display:block; margin-top:2px}
 .dna-error-input {background:#feecec; border-color:#ba0c0c}
 
 
-.glow110-overlay .dna-preview-box {width:350px}
+.glow110-overlay {width:350px}
 
 /* default form */
 .dna-main form label {margin-bottom:3px; font-weight:bold; display:block}
@@ -77,6 +77,7 @@ span.dna-fnote {display:block; margin-top:2px}
 .dna-buttons li {display:inline-block; float:left;  padding:0; height:1%; margin-right:10px}
 .dna-buttons input {padding:3px 5px 2px 5px; text-transform:uppercase; cursor:pointer; background:#91c2dc url(/dnaimages/dna_messageboard/img/bg-btn.gif) repeat-x 0 100%; font-weight:bold; color:#fff; border:1px solid #3988b2; font-size:.9em}
 .dna-buttons input:focus {background:#82bdde url(/dnaimages/dna_messageboard/img/bg-btn-h.gif) repeat-x 0 100%; color:#fff}
+.dna-buttons input[type=submit]{width:auto}
 .dna-buttons a {display:block; padding:2px 7px!important; text-transform:uppercase; cursor:pointer; background:#91c2dc url(/dnaimages/dna_messageboard/img/bg-btn.gif) repeat-x 0 100%; font-weight:bold; color:#fff!important; border:1px solid #3988b2 !important; font-size:.95em}
 .dna-buttons a:hover,.dna-buttons a:focus,.dna-buttons a:active {background:#82bdde url(/dnaimages/dna_messageboard/img/bg-btn-h.gif) repeat-x 0 100%; border-bottom:1px solid #666}
 
@@ -125,18 +126,18 @@ span.dna-fnote {display:block; margin-top:2px}
 /* box: open times */
 .dna-open-time {margin:0 10px 10px 10px}
 .dna-open-time table {width:100%}
-.dna-open-time td,.dna-open-time th {padding:4px}
+.dna-open-time td{padding:4px}
+.dna-open-time th span {display:block; padding:2px; margin-bottom:8px; border-bottom:1px solid #56a4ce}
 .dna-open-time tr.odd {background-color:#ebebd6}
-.dna-open-time tr.off {background-color:#eee}
+.dna-open-time tr.off {background-color:#dce3e8}
 
 /* SCHEDULE page */
-.dna-mb-opentime {}
 .dna-mb-opentime div div {padding:0 10px 10px 10px}
-.dna-mb-opentime label {display:inline-block !important; font-weight:normal !important}
+.dna-mb-opentime label {display:inline-block !important; margin-right:5px; font-weight:normal !important}
 .dna-mb-opentime table   {width:100%}
 .dna-mb-opentime td,.dna-mb-opentime table th {padding:4px}
 .dna-mb-opentime tr.odd td,.dna-mb-opentime tr.odd th {background-color:#ebebd6}
-.dna-mb-opentime tr.off td,.dna-mb-opentime tr.off th {background-color:#eee}
+.dna-mb-opentime tr.off td,.dna-mb-opentime tr.off th {background-color:#dce3e8}
 .dna-mb-opentime input[type=checkbox] {margin-top:3px}
 
 .dna-radio-stime {width:10em; vertical-align:middle; margin:0!important; padding-left:5px}
@@ -197,13 +198,14 @@ span.dna-fnote {display:block; margin-top:2px}
 .dna-preview-box .dna-buttons {border-top:1px solid #56a4ce; padding:10px 0}
 .dna-preview-box .dna-buttons li {padding:0}
 
-#dna-preview-editheader ul li label,#dna-preview-edittopiclayout ul li label,#dna-preview-editfooter ul li label,.dna-turn-img-off label,#dna-preview-addtoolbar label,#dna-preview-addrecentdiscussions label,#dna-topic-archive label,#dna-topic-unarchive label,#dna-topic-delete label{display:inline-block!important; width:220px}
+#dna-preview-editheader ul li label,#dna-preview-edittopiclayout ul li label,#dna-footer-color ul li label,.dna-turn-img-off label,#dna-preview-addtoolbar label,#dna-preview-addrecentdiscussions label,#dna-topic-archive label,#dna-topic-unarchive label,#dna-topic-delete label{display:inline-block!important; width:240px}
 
-.glow110-overlay input,.glow110-overlay textarea{width:100%}
-.glow110-overlay #dna-preview-editheader ul li input,.glow110-overlay #dna-preview-edittopiclayout ul li input,#dna-preview-editfooter ul li input,.dna-turn-img-off input,#dna-preview-addtoolbar input,#dna-preview-addrecentdiscussions input,#dna-topic-archive input,#dna-topic-unarchive input,#dna-topic-delete input{width:auto}
+.glow110-overlay input,.glow110-overlay textarea{width:325px}
+*+html .glow110-overlay textarea{width:320px}
+.glow110-overlay #dna-preview-editheader ul li input,.glow110-overlay #dna-preview-edittopiclayout ul li input,#dna-footer-color ul li input,.dna-turn-img-off input,#dna-preview-addtoolbar input,#dna-preview-addrecentdiscussions input,#dna-topic-archive input,#dna-topic-unarchive input,#dna-topic-delete input{width:auto}
 .glow110-overlay .dna-topic-step {font-size:.9em}
 
-
+.dna-turn-img-off {padding:5px; background:#dce3e8; border:1px solid #ccc}
 
 /* color scheme */
 .dna-blue {padding:0 0 5px 13px; background: url(/dnaimages/dna_messageboard/img/icon-blue.gif) no-repeat 0 3px}
