--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
@@ -8,7 +8,7 @@
     .dna-main input:focus,.dna-main select:focus {border:1px solid #7f9db9; background:#ebebe4}
 
     /* link */
-    .dna-main a,.glow110-overlay a {color:#666; padding:1px; border-bottom:1px solid #666; text-decoration:none}
+    .dna-main a,.glow110-overlay a,.dna-main a:visited, .glow110-overlay a:visited {color:#666; padding:1px; border-bottom:1px solid #666; text-decoration:none}
     .dna-main a:hover,.glow110-overlay a:hover{border-bottom:none}
     .dna-main a:focus,.glow110-overlay a:focus,.dna-main a:active,.glow110-overlay a:active {border-bottom:none; background:#666; color:#fff}
 
@@ -91,6 +91,7 @@
 
     /* save and cancel buttons */
     .dna-buttons {clear:both; height:1%; margin-top:10px}
+    span.dna-buttons {margin-left:10px}
     .dna-buttons li {display:inline-block; float:left;  padding:0; height:1%; margin-right:10px}
     .dna-buttons input {padding:3px 5px 2px 5px; text-transform:uppercase; cursor:pointer; background:#91c2dc url(/dnaimages/dna_messageboard/img/bg-btn.gif) repeat-x 0 100%; font-weight:bold; color:#fff; border:1px solid #3988b2; font-size:.9em; overflow:visible}
     .dna-buttons input:focus {background:#82bdde url(/dnaimages/dna_messageboard/img/bg-btn-h.gif) repeat-x 0 100%; color:#fff}
@@ -192,17 +193,19 @@
     #dna-preview-right {width:20em}
 
     /* display topic layout: 1 or 2 cols */
-    .dna-list-topic-col1 li,.dna-list-topic-col2 li {position:relative; padding:10px; width:19.1em; min-height:34em}
+    
+    .dna-list-topic-col,.dna-list-topic-col1,.dna-list-topic-col2 {margin-top:20px}
+    .dna-list-topic-col1 li,.dna-list-topic-col2 li {position:relative; padding:10px; min-height:34em}
     * html .dna-list-topic-col1  li,* html .dna-list-topic-col2  li {height:32.5em}
     .dna-list-topic-col1 li p,.dna-list-topic-col2 li p,.dna-list-topic-col li p {margin:10px 0 !important}
     .dna-replies {text-align:right}
     .dna-list-topic-col1 .dna-link-edit,.dna-list-topic-col2 .dna-link-edit, .dna-list-topic-col .dna-link-edit {right:10px; top:0}
 
-    .dna-list-topic-col1 {width:21em; float:left}
-    .dna-list-topic-col2 {width:21em; float:right}
+    .dna-list-topic-col1 {width:20.1em; float:left; margin-left:10px}}
+    .dna-list-topic-col2 {width:20.1em; float:right; margin-right:10px}
     .dna-topic-pos {width:25px!important}
 
-    .dna-list-topic-col li {position:relative; padding:10px; width:41em}
+    .dna-list-topic-col li {position:relative; padding:10px; margin:0 10px 10px 10px; width:39em}
 
     .dna-tl-2c  {padding:0 0 45px 60px; background: url(/dnaimages/dna_messageboard/img/icon-lay-2.gif) no-repeat 0 0}
     .dna-tl-1c  {padding:0 0 45px 60px; background: url(/dnaimages/dna_messageboard/img/icon-lay-1.gif) no-repeat 0 0}
@@ -211,6 +214,9 @@
 
     .glow-sortable-dropindicator {border:2px dotted #ccc; margin: 10px}
 
+
+    .dna-topic-options {margin:20px 10px}
+    .dna-topic-options span {display:inline-block; padding:5px; width:200px}
 
     /* overlay */
     .dna-preview-box {margin-bottom:10px; background:#fff; height:1%; border:1px solid #ccc}
